--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "KantarV3",
   "author": "premierturk",
   "license": "CC0-1.0",
-  "version": "1.0.19",
+  "version": "1.0.21",
   "main": "main.js",
   "scripts": {
     "start": "ng serve --proxy-config src/proxy.conf.json",
@@ -47,7 +47,8 @@
     },
     "extraFiles": [
       "./kantarConfigs.json",
-      "./antenConfigTools/**"
+      "./antenConfigTools/**",
+      "./fis/**"
     ]
   },
   "private": true,
