--- a/kantarConfigs.json
+++ b/kantarConfigs.json
@@ -3,7 +3,7 @@
     "kantarId": 1,
     "depolamaAlanId": 1,
     "kantarAdi": "DEBUG Kantar",
-    "kantarMarka": "tartanTarim",
+    "kantarMarka": "tartanTarti",
     "kantar": true,
     "printerName": "SEC001599D4A36B",
     "isPrinterOn": true,
@@ -19,12 +19,12 @@
     "kantarId": 1,
     "depolamaAlanId": 1,
     "kantarAdi": "Özcan SUNAY",
-    "kantarMarka": "tartanTarim",
+    "kantarMarka": "tartanTarti",
     "kantar": true,
     "printerName": "",
     "isPrinterOn": false,
     "serialPort": {
-      "path": "COM1",
+      "path": "COM3",
       "autoOpen": false,
       "baudRate": 9600,
       "dataBits": 8,
@@ -93,6 +93,22 @@
       "baudRate": 9600,
       "dataBits": 8,
       "parity": "none"
+    }
+  },
+  "varan": {
+    "kantarId": 1,
+    "depolamaAlanId": 5,
+    "kantarAdi": "Varan Madencilik",
+    "kantarMarka": "tamTarti",
+    "kantar": true,
+    "printerName": "EPSON LX-350 ESC/P",
+    "isPrinterOn": true,
+    "serialPort": {
+      "path": "COM1",
+      "autoOpen": false,
+      "baudRate": 9600,
+      "dataBits": 8,
+      "parity": "even"
     }
   }
 }
